30 activated with kables commented out for testing

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -461,8 +461,12 @@ This approach has been assessed to exhibit high power and a low false
 discovery rate, which has the following components:
 
   1. Winsorization to decrease the influence of outliers;
-  1. Posterior sampling based on a beta mixture prior to address sampling variability and zero inflation;
-  1. Reference-based multiple-stage normalization to address compositional effects;
+  
+  1. Posterior sampling based on a beta mixture prior to address
+  sampling variability and zero inflation;
+  
+  1. Reference-based multiple-stage normalization to address
+  compositional effects;
 
 
 ```{r ZicoSeq, eval=TRUE}
@@ -481,7 +485,7 @@ zicoseq.obj <- GUniFrac::ZicoSeq(meta.dat = meta,
 zicoseq_out <- cbind.data.frame(p.raw=zicoseq.obj$p.raw, p.adj.fdr=zicoseq.obj$p.adj.fdr) 
 
 
-```{r ZicoSeq, eval=FALSE}
+```{r ZicoSeq_kable, eval=FALSE}
 kable(head(filter(zicoseq_out, p.adj.fdr<0.05)))
 ```
 
