30 activated with kables commented out for testing

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -354,14 +354,19 @@ out <- ancombc2(
   alpha = 0.05, 
   global = TRUE # multi group comparison will be deactivated automatically 
 )
+```
 
+```{r ancombc2b, warning = FALSE, eval=TRUE}
 # store the FDR adjusted results [test on v2.0.3] 
 ancombc_result <- cbind.data.frame(taxid = out$res$taxon,
                        ancombc = as.vector(out$res$q_Geographical_locationPune))
+```
 
+
+```{r ancombc2c, warning = FALSE, eval=FALSE}
 # store the FDR adjusted results [test on v1.2.2] 
-# ancombc_result <- out$res$q_val %>% rownames_to_column('taxid') %>%
-                                      dplyr::rename(ancombc = 2)
+ancombc_result <- out$res$q_val %>% rownames_to_column('taxid') %>%
+                                    dplyr::rename(ancombc = 2)
 ```
 
 The object `out` contains all model output. Again, see the 
@@ -374,7 +379,7 @@ standard errors, p-values and q-values. Conveniently, there is a dataframe
 abundant between the groups (again, keep in mind that the answer is not 
 black-white). Below we show the first 6 entries of this dataframe.
 
-```{r, eval=FALSE}
+```{r ancom_kable, eval=FALSE}
 kable(head(ancombc_result))
 ```
 
