--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -181,7 +181,7 @@ manipulation.
 Let us here do aggregation to genus level, add relative abundance
 assay, and perform prevalence filtering.
 
-```{r}
+```{r setup}
 tse <- agglomerateByRank(tse0, rank = "genus") %>%
        transformCounts(assay.type = "counts",
                        method = "relabundance",
@@ -363,7 +363,7 @@ ancombc_result <- cbind.data.frame(taxid = out$res$taxon,
 ```
 
 
-```{r ancombc2c, warning = FALSE, eval=FALSE}
+```{r ancombc2c, warning = FALSE, eval=TRUE}
 # store the FDR adjusted results [test on v1.2.2] 
 ancombc_result <- out$res$q_val %>% rownames_to_column('taxid') %>%
                                     dplyr::rename(ancombc = 2)
@@ -387,10 +387,10 @@ kable(head(ancombc_result))
 
 ### MaAsLin2 
 
-Next, we will illustrate the use of MaAsLin2 [@Mallick2020]. The method is based on
-generalized linear models. It is flexible for different study designs
-and covariate structures. For more details, you can check their [official
-tutorial](https://github.com/biobakery/biobakery/wiki/maaslin2).
+Let us next illustrate MaAsLin2 [@Mallick2020]. This method is based on
+generalized linear models and flexible for different study designs
+and covariate structures. For details, check their
+[Biobakery tutorial](https://github.com/biobakery/biobakery/wiki/maaslin2).
 
 ```{r maaslin2, results = "hide", eval=TRUE}
 # maaslin expects features as columns and samples as rows 
@@ -415,28 +415,28 @@ maaslin2_out <- Maaslin2(
 
 Which genera are identified as differentially abundant? (leave out "head" to see all).
 
-```{r, maaslin2kable, eval=FALSE}
+```{r, maaslin2kable, eval=TRUE}
 kable(head(filter(maaslin2_out$results, qval <= 0.05)))
 ```
 
-A folder will be created that is called like the above specified
-output.  It contains also figures to visualize the difference between
-genera for the significant ones.
+This will create a folder that is called like in the output specified
+above. It contains also figures to visualize difference between
+significant taxa.
 
 
 ### LinDA 
 
 Lastly, we cover linear models for differential abundance analysis of
-microbiome compositional data (@Zhou2022). This tool is very similar
-to ANCOMBC with few differences: 1) LinDA correct for the
-compositional bias differently using the mode of all regression
-coefficients. 2) The authors claim that it runs 100-1000x faster than
-ANCOMBC and 3) it support hierarchical models.  The latter could be
-ignored as ANCOMBC will be supporting hierarchical models with the
-next release. Nevertheless, LinDA seems a promising tool that achieves
-the best power/fdr trade-off together with ANCOMBC according to the
-authors. The speed might make it the choice for bigger datasets or
-datasets with a very high number of features.
+microbiome compositional data (@Zhou2022). This is very similar to
+ANCOMBC with few differences: 1) LinDA correct for the compositional
+bias differently using the mode of all regression coefficients. 2) it
+is faster (100x-1000x than ANCOMBC and according to the authors); 3)
+it supports hierarchical models. The latest ANCOMBC versions are also
+supporting hierarchical models. Nevertheless, LinDA seems a promising
+tool that achieves a very good power/fdr trade-off together with
+ANCOMBC according to the review. The speed improvements might make it
+critical especially for datasets that have higher sample or feature
+set sizes.
 
 
 ```{r linda, eval=TRUE}
