--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -415,7 +415,7 @@ maaslin2_out <- Maaslin2(
 
 Which genera are identified as differentially abundant? (leave out "head" to see all).
 
-```{r, maaslin2kable, eval=TRUE}
+```{r, maaslin2kable, eval=FALSE}
 kable(head(filter(maaslin2_out$results, qval <= 0.05)))
 ```
 
