--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -181,7 +181,7 @@ manipulation.
 Let us here do aggregation to genus level, add relative abundance
 assay, and perform prevalence filtering.
 
-```{r setup}
+```{r datasetup}
 tse <- agglomerateByRank(tse0, rank = "genus") %>%
        transformCounts(assay.type = "counts",
                        method = "relabundance",
