--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -379,7 +379,7 @@ object, which contains dataframes with the coefficients, standard
 errors, p-values and q-values. Below we show the first entries of this
 dataframe.
 
-```{r ancom_kable, eval=FALSE}
+```{r ancom_kable, eval=TRUE}
 kable(head(ancombc_result))
 ```
 
@@ -415,7 +415,7 @@ maaslin2_out <- Maaslin2(
 
 Which genera are identified as differentially abundant? (leave out "head" to see all).
 
-```{r, maaslin2kable, eval=FALSE}
+```{r, maaslin2kable, eval=TRUE}
 kable(head(filter(maaslin2_out$results, qval <= 0.05)))
 ```
 
@@ -452,7 +452,7 @@ linda.res <- linda(
 linda_out <- linda.res$output$Geographical_locationPune
 ```
 
-```{r linda2, eval=FALSE}
+```{r linda2, eval=TRUE}
 # to scan the table for genera where H0 could be rejected:
 kable(head(filter(as.data.frame(linda_out), reject)))
 ```
@@ -490,7 +490,7 @@ zicoseq.obj <- GUniFrac::ZicoSeq(meta.dat = meta,
 zicoseq_out <- cbind.data.frame(p.raw=zicoseq.obj$p.raw, p.adj.fdr=zicoseq.obj$p.adj.fdr) 
 
 
-```{r ZicoSeq_kable, eval=FALSE}
+```{r ZicoSeq_kable, eval=TRUE}
 kable(head(filter(zicoseq_out, p.adj.fdr<0.05)))
 ```
 
