--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -560,7 +560,7 @@ ancombc_cov <- ancombc2(
 # Again we only show the first 6 entries.
 ```
 
-```{r ancombc_adj2, eval=FALSE}
+```{r ancombc_adj2, eval=TRUE}
 tab <- ancombc_cov$res %>% dplyr::select(starts_with(c("taxon", "lfc", "q"))) %>%
 kable(head(tab))
 ```
@@ -580,7 +580,7 @@ linda_cov <- linda(
 linda.res <- linda_cov$output$Geographical_locationPune
 ```
 
-```{r linda_adj2, eval=FALSE}
+```{r linda_adj2, eval=TRUE}
 kable(head(filter(linda.res, reject==T)))
 ```
 
@@ -604,7 +604,7 @@ zicoseq_out <- cbind.data.frame(p.raw=zicoseq.obj$p.raw,
                                 p.adj.fdr=zicoseq.obj$p.adj.fdr) 
 ```
 
-```{r ZicoSeq_adj2, eval=FALSE}
+```{r ZicoSeq_adj2, eval=TRUE}
 kable(head(filter(zicoseq_out, p.adj.fdr<0.05)))
 ```
 
