--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -561,18 +561,18 @@ ancombc_cov <- ancombc2(
 ```
 
 ```{r ancombc_adj2, eval=TRUE}
-tab <- ancombc_cov$res %>% dplyr::select(starts_with(c("taxon", "lfc", "q"))) %>%
+tab <- ancombc_cov$res %>% dplyr::select(starts_with(c("taxon", "lfc", "q")))
 kable(head(tab))
 ```
 
 ### LinDA
 
+
 ```{r linda_adj, eval=TRUE}
-otu.tab <- as.data.frame(assay(tse))
-meta <- as.data.frame(colData(tse))
+
 linda_cov <- linda(
-  otu.tab, 
-  meta, 
+  as.data.frame(assay(tse, "counts")), 
+  as.data.frame(colData(tse)), 
   formula = '~ Geographical_location + Age', 
   alpha = 0.05, 
   prev.filter = 0, 
