should be ok now

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -85,8 +85,7 @@ chanllenegs:
   
   - Bias-correction used by ANCOMBC [@ancombc2020].
 
-The most popular tools, without going into evaluating whether or not
-they perform well for this task, are:
+Some of the popular tools for differential abundance analysis include:
 
 - ALDEx2 [@Gloor2016] 
 - ANCOMBC [@ancombc2020]
@@ -112,35 +111,34 @@ they perform well for this task, are:
 
 
 We recommend to have a look at @Nearing2022 who compared all these
-listed methods across 38 different datasets. Because different methods
-use different approaches (parametric vs non-parametric, different
-normalization techiniques, assumptions etc.), results can differ
-between methods.  Unfortunately, as @Nearing2022 point out, they can
-differ substantially. Also, more recently @Yang2022 comprehensively
-evaluated these methods via a Semi-parametric framework and 106 real
-datasets. @Yang2022 also pointed out, different DAA tools could
-sometimes produce quite discordant results, opening to the possibility
-of cherry-picking the tool in favor of one’s own
-hypothesis. Therefore, it is highly recommended to pick several
-methods to get an idea about how robust and potentially reproducible
-your findings are depending on the method. In this section we
-demonstrate 4 methods that can be recommended based on recent
-literature (ANCOM-BC [@ancombc2020], ALDEx2 [@Gloor2016], Maaslin2
-[@Mallick2020], LinDA [@Zhou2022] and ZicoSeq [@Yang2022]) and we will
-compare the results between them.
+methods across 38 different datasets. Because different methods use
+different approaches (parametric vs non-parametric, different
+normalization techiniques, assumptions etc.), the results may differ
+between methods, sometimes substantially as @Nearing2022 pointed
+out. More recently @Yang2022 comprehensively evaluated these methods
+via a semi-parametric framework and 106 real datasets. @Yang2022 also
+concluded that different DA methods can sometimes produce discordant
+results, opening to the possibility for cherry-picking tools in favor
+of one’s own hypothesis. Therefore it is highly recommended to pick
+several methods to assess how robust and potentially reproducible your
+findings are with different methods.
 
-Note that the purpose of this section is to show how to perform DAA in
-R, not how to correctly do causal inference. Depending on your
-experimental setup and your theory, you must determine how to specify
-any model exactly.  E.g., there might be confounding factors that
-might drive (the absence of) differences between the shown groups that
-we ignore here for simplicity. Or your dataset is repeated sampling
-design, matched-pair design or the general longitudianl design.
-However, we will show how you could include covariates in those
-models.  Furthermore, we picked a dataset that merely has microbial
-abundances in a TSE object as well as a grouping variable in the
-sample data. We simplify the analysis by only including 2 of the 3
-groups.
+In this section we demonstrate the use of four methods that can be
+recommended based on recent literature (ANCOM-BC [@ancombc2020],
+_ALDEx2_ [@Gloor2016], _Maaslin2_ [@Mallick2020], _LinDA_ [@Zhou2022]
+and _ZicoSeq_ [@Yang2022]).
+
+The purpose of this section is to show how to perform DAA in R, not
+how to correctly do causal inference. Depending on your experimental
+setup and your theory, you must determine how to specify any model
+exactly.  E.g., there might be confounding factors that might drive
+(the absence of) differences between the shown groups that we ignore
+here for simplicity. Or your dataset is repeated sampling design,
+matched-pair design or the general longitudianl design.  We will
+demonstrate how to include covariates in those models. We picked a
+dataset that merely has microbial abundances in a TSE object as well
+as a grouping variable in the sample data. We simplify the examples by
+only including two of the three groups.
 
 
 ```{r load-pkg-data}
@@ -218,9 +216,11 @@ It furthermore applies the centered-log-ratio transformation (or closely
 related log-ratio transforms). Depending on the experimental setup, it will
 perform a two sample Welch's T-test and Wilcoxon-test or a one-way ANOVA and
 Kruskal-Wallis-test. For more complex study designs, there is a possibility to 
-utilize the `glm` functionality within ALDEx2. The Benjamini-Hochberg procedure
-is applied in any case to correct for multiple testing. Below we show a simple
-example that illustrates the workflow.
+utilize the `glm` functionality within ALDEx2.
+
+The Benjamini-Hochberg procedure is applied by default to correct for
+multiple testing. Below we show a simple example that illustrates the
+workflow.
 
 
 ```{r, aldex2, eval=TRUE}
@@ -244,7 +244,7 @@ x_tt <- aldex.ttest(x, paired.test = FALSE, verbose = FALSE)
 Effect sizes:
 
 ```{r, aldex2_efs, eval=TRUE}
-# determines the median clr abundance of the feature in all samples and in
+# Determines the median clr abundance of the feature in all samples and in
 # groups, the median difference between the two groups, the median variation
 # within each group and the effect size, which is the median of the ratio
 # of the between group difference and the larger of the variance within groups
