--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -28,32 +28,64 @@ has also been criticized recently [@Quinn2021].
 
 ### Examples and tools
 
-Due to the complex data characteristics of microbiome sequencing data, differential abundance analysis of microbiome data faces many statistical challenges [@Yang2022], including:
+Due to the complex data characteristics of microbiome sequencing data,
+differential abundance analysis of microbiome data faces many
+statistical challenges [@Yang2022], including:
   
-- Highly variable. The abundance of a specific taxon could range over several orders of magnitude. 
+- Highly variable. The abundance of a specific taxon could range over
+  several orders of magnitude.
   
-- Zero-inflated. In a typical microbiome dataset, more than 70% of the values are zeros. Zeros could be due to either physical absence (structural zeros) or insufficient sampling effort (sampling zeros).
+- Zero-inflated. In a typical microbiome dataset, more than 70% of the
+  values are zeros. Zeros could be due to either physical absence
+  (structural zeros) or insufficient sampling effort (sampling zeros).
   
-- Compositional. Increase or decrease in the (absolute) abundance of one taxon at the sampling site will lead to apparent changes in the relative abundances of other taxa in the sample. 
+- Compositional. Increase or decrease in the (absolute) abundance of
+  one taxon at the sampling site will lead to apparent changes in the
+  relative abundances of other taxa in the sample.
 
-As summarized in @Yang2022, to address the above statistical chanllenegs:
+As summarized in @Yang2022, to address the above statistical
+chanllenegs:
 
-- Over-dispersed count models has been proposed to address zero inflation, such as the negative binomial model used by edgeR [@Chen2016] and DESeq2 [@Love2014], the beta-binomial model used by corncorb [@Martin2021]. 
+- Over-dispersed count models has been proposed to address zero
+  inflation, such as the negative binomial model used by edgeR
+  [@Chen2016] and DESeq2 [@Love2014], the beta-binomial model used by
+  corncorb [@Martin2021].
 
-- Zero-inflated mixture models has aslo been proposed to address zero inflation, such as zero-inflated log-normal/normal mixture model used by metagenomeSeq [@Paulson2017] and RAIDA [@Sohn2015], zero-inflated beta-binomial model used by ZIBB [@ZIBB2018], and zero-inflated negative binomial model used by Omnibus [@Omnibus2018]. 
+- Zero-inflated mixture models has aslo been proposed to address zero
+  inflation, such as zero-inflated log-normal/normal mixture model
+  used by metagenomeSeq [@Paulson2017] and RAIDA [@Sohn2015],
+  zero-inflated beta-binomial model used by ZIBB [@ZIBB2018], and
+  zero-inflated negative binomial model used by Omnibus
+  [@Omnibus2018].
 
-- Bayesian methods have been used to impute the zeros for methods working on proportion data, accounting for sampling variability and sequencing depth variation. Examples include ALDEx2 [@Gloor2016] and eBay [@Liu2020]. 
+- Bayesian methods have been used to impute the zeros for methods
+  working on proportion data, accounting for sampling variability and
+  sequencing depth variation. Examples include ALDEx2 [@Gloor2016] and
+  eBay [@Liu2020].
 
-- Other methods use the pseudo-count approach to impute the zeros, such as MaAsLin2 [@Mallick2020] and ANCOMBC [@ancombc2020].
+- Other methods use the pseudo-count approach to impute the zeros,
+  such as MaAsLin2 [@Mallick2020] and ANCOMBC [@ancombc2020].
 
-- Different strategies have been used to address compositional effects, including:
+- Different strategies have been used to address compositional
+  effects, including:
 
-  - Robust normalization. For example, trimmed mean of M-values (TMM) normalization used by edgeR, relative log expression (RLE) normalization used by DESeq2 [@Love2014], cumulative sum scaling (CSS) normalization used by metagenomeSeq, centered log-ratio transformation (CLR) normalization used by ALDEx2 [@Gloor2016] and geometric mean of pairwise ratios (GMPR) normalization used by Omnibus [@Omnibus2018]. Wrench normalization [@Kumar2018] corrects the compositional bias by an empirical Bayes approach, which has been recommended in metagenomeSeq [@Paulson2017] tutorial.
-  - Reference taxa approach used by DACOMP [@Brill2019] and RAIDA [@Sohn2015]. 
+  - Robust normalization. For example, trimmed mean of M-values (TMM)
+    normalization used by edgeR, relative log expression (RLE)
+    normalization used by DESeq2 [@Love2014], cumulative sum scaling
+    (CSS) normalization used by metagenomeSeq, centered log-ratio
+    transformation (CLR) normalization used by ALDEx2 [@Gloor2016] and
+    geometric mean of pairwise ratios (GMPR) normalization used by
+    Omnibus [@Omnibus2018]. Wrench normalization [@Kumar2018] corrects
+    the compositional bias by an empirical Bayes approach, which has
+    been recommended in metagenomeSeq [@Paulson2017] tutorial.
+  
+  - Reference taxa approach used by DACOMP [@Brill2019] and RAIDA [@Sohn2015].
+  
   - Analyzing the pattern of pairwise log ratios, such as ANCOM [@Mandal2015].
+  
   - Bias-correction used by ANCOMBC [@ancombc2020].
 
-The most popular tools, without going into evaluating whether or not they perform well for this task, are:  
+Some of the popular tools for differential abundance analysis include:
 
 - ALDEx2 [@Gloor2016] 
 - ANCOMBC [@ancombc2020]
@@ -78,22 +110,35 @@ The most popular tools, without going into evaluating whether or not they perfor
 - [Wilcoxon test](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/wilcox.test)  
 
 
-We recommend to have a look at @Nearing2022
-who compared all these listed methods across 38
-different datasets. Because different methods use different approaches
-(parametric vs non-parametric, different normalization techiniques, assumptions
-etc.), results can differ between methods. 
-Unfortunately, as @Nearing2022 point out, they can differ substantially. Also, more recently @Yang2022 comprehensively evaluated these methods via a Semi-parametric framework and 106 real datasets. @Yang2022 also pointed out, different DAA tools could sometimes produce quite discordant results, opening to the possibility of cherry-picking the tool in favor of one’s own hypothesis. Therefore, it is highly recommended to pick several methods to get an idea about how robust and potentially reproducible your findings are depending on the method. In this section we demonstrate 4 methods that can be recommended based on recent literature (ANCOM-BC [@ancombc2020], ALDEx2 [@Gloor2016], Maaslin2 [@Mallick2020], LinDA [@Zhou2022] and ZicoSeq [@Yang2022]) and we will compare the results between them.
+We recommend to have a look at @Nearing2022 who compared all these
+methods across 38 different datasets. Because different methods use
+different approaches (parametric vs non-parametric, different
+normalization techiniques, assumptions etc.), the results may differ
+between methods, sometimes substantially as @Nearing2022 pointed
+out. More recently @Yang2022 comprehensively evaluated these methods
+via a semi-parametric framework and 106 real datasets. @Yang2022 also
+concluded that different DA methods can sometimes produce discordant
+results, opening to the possibility for cherry-picking tools in favor
+of one’s own hypothesis. Therefore it is highly recommended to pick
+several methods to assess how robust and potentially reproducible your
+findings are with different methods.
 
-Note that the purpose of this section is to show how to perform DAA in R, not
-how to correctly do causal inference. Depending on your experimental setup
-and your theory, you must determine how to specify any model exactly. 
-E.g., there might be confounding factors that might drive (the absence of)
-differences between the shown groups that we ignore here for simplicity. Or your dataset is repeated sampling design, matched-pair design or the general longitudianl design.
-However, we will show how you could include covariates in those models.
-Furthermore, we picked a dataset that merely has microbial abundances in a TSE
-object as well as a grouping variable in the sample data. We simplify the
-analysis by only including 2 of the 3 groups. 
+In this section we demonstrate the use of four methods that can be
+recommended based on recent literature (ANCOM-BC [@ancombc2020],
+_ALDEx2_ [@Gloor2016], _Maaslin2_ [@Mallick2020], _LinDA_ [@Zhou2022]
+and _ZicoSeq_ [@Yang2022]).
+
+The purpose of this section is to show how to perform DAA in R, not
+how to correctly do causal inference. Depending on your experimental
+setup and your theory, you must determine how to specify any model
+exactly.  E.g., there might be confounding factors that might drive
+(the absence of) differences between the shown groups that we ignore
+here for simplicity. Or your dataset is repeated sampling design,
+matched-pair design or the general longitudianl design.  We will
+demonstrate how to include covariates in those models. We picked a
+dataset that merely has microbial abundances in a TSE object as well
+as a grouping variable in the sample data. We simplify the examples by
+only including two of the three groups.
 
 
 ```{r load-pkg-data}
@@ -102,21 +147,11 @@ library(patchwork)
 library(tidySummarizedExperiment)
 library(knitr)
 library(tidyverse)
-library(phyloseq)
 library(ALDEx2)
 library(Maaslin2)
 library(MicrobiomeStat)
-
-if(!require(ANCOMBC)){
-  BiocManager::install("ANCOMBC")
-  library(ANCOMBC)
-
-}
-if(!require(GUniFrac)){
-  install.packages("GUniFrac")
-  library(GUniFrac)
-}
-
+library(ANCOMBC)
+library(GUniFrac)
 
 # set random seed because some tools can randomly vary and then produce 
 # different results:
@@ -125,27 +160,44 @@ set.seed(13253)
 # we use a demo dataset and restrict it to two geo locations
 # for easy illustration
 data(peerj13075)
-tse <- peerj13075
-tse <- tse[ ,tse$Geographical_location %in% c("Pune", "Nashik")]
+tse0 <- peerj13075
+tse0 <- tse0[ ,tse0$Geographical_location %in% c("Pune", "Nashik")]
 # Let us make this a factor
-tse$Geographical_location <- factor(tse$Geographical_location)
+tse0$Geographical_location <- factor(tse0$Geographical_location)
 
 # how many observations do we have per group?
-count(as.data.frame(colData(tse)), Geographical_location) %>% kable()
+as.data.frame(colData(tse0)) %>% 
+count(Geographical_location) %>%
+  kable()
 ```
 
 ### Prevalence Filtering 
 
-Before we jump to our analyses, we may want to perform prevalence filtering.
-@Nearing2022 found that applying a 10% threshold
-for the prevalence of the taxa generally resulted in more robust results. 
-Some tools have builtin arguments for that. By applying the threshold to our
-input data, we can make sure it is applied for all tools. Below we show how to
-do this in `mia`:
+Before we jump to our analyses, we may want to perform some data
+manipulation.
 
-```{r}
-tse <- subsetByPrevalentTaxa(tse, detection = 0, prevalence = 0.1)
+Let us here do aggregation to genus level, add relative abundance
+assay, and perform prevalence filtering.
+
+```{r datasetup}
+tse <- agglomerateByRank(tse0, rank = "genus") %>%
+       transformCounts(assay.type = "counts",
+                       method = "relabundance",
+		       MARGIN = "samples") %>%
+       # subset based on the relative abundance assay		       
+       subsetByPrevalentTaxa(detection = 0,
+                             prevalence = 10/100,
+			     assay.type = "relabundance")
+
+# Add also clr abundances
+tse <- transformCounts(tse, method="clr", pseudocount=1) # not bale to run
 ```
+
+Regarding prevalence filtering, @Nearing2022 found that applying a 10%
+threshold for the prevalence of the taxa generally resulted in more
+robust results. Some tools have builtin arguments for that. By
+applying the threshold to our input data, we can make sure it is
+applied for all tools. 
 
 
 
@@ -164,9 +216,11 @@ It furthermore applies the centered-log-ratio transformation (or closely
 related log-ratio transforms). Depending on the experimental setup, it will
 perform a two sample Welch's T-test and Wilcoxon-test or a one-way ANOVA and
 Kruskal-Wallis-test. For more complex study designs, there is a possibility to 
-utilize the `glm` functionality within ALDEx2. The Benjamini-Hochberg procedure
-is applied in any case to correct for multiple testing. Below we show a simple
-example that illustrates the workflow.
+utilize the `glm` functionality within ALDEx2.
+
+The Benjamini-Hochberg procedure is applied by default to correct for
+multiple testing. Below we show a simple example that illustrates the
+workflow.
 
 
 ```{r, aldex2, eval=TRUE}
@@ -190,7 +244,7 @@ x_tt <- aldex.ttest(x, paired.test = FALSE, verbose = FALSE)
 Effect sizes:
 
 ```{r, aldex2_efs, eval=TRUE}
-# determines the median clr abundance of the feature in all samples and in
+# Determines the median clr abundance of the feature in all samples and in
 # groups, the median difference between the two groups, the median variation
 # within each group and the effect size, which is the median of the ratio
 # of the between group difference and the larger of the variance within groups
@@ -285,62 +339,68 @@ that we specify.
 
 
 ```{r ancombc2, warning = FALSE, eval=TRUE}
-# make phyloseq object
-otu <- otu_table(assay(tse), taxa_are_rows = T)
-taxa <- tax_table(as.matrix(rowData(tse)))
-meta <- sample_data(as.data.frame(colData(tse)))
-phy <- phyloseq(otu,taxa,meta)
-# perform the analysis 
-out <- ancombc(
-  phyloseq = phy,
-  formula = "Geographical_location", 
+# Run ANCOM-BC 
+out <- ancombc2(
+  data = tse,
+  assay_name = "counts", 
+  tax_level = "genus", 
+  fix_formula = "Geographical_location", 
   p_adj_method = "fdr", 
-  lib_cut = 0, 
+  lib_cut = 0,
+  prv_cut = 0,
   group = "Geographical_location", 
   struc_zero = TRUE, 
   neg_lb = TRUE,
   alpha = 0.05, 
   global = TRUE # multi group comparison will be deactivated automatically 
 )
-# store the FDR adjusted results [test on v2.0.3] 
-ancombc_out <- cbind.data.frame(taxid = out$res$q_val$taxon, ancombc = as.vector(out$res$q_val$Geographical_locationPune))
-# store the FDR adjusted results [test on v1.2.2] 
-# ancombc_out <- out$res$q_val %>% rownames_to_column('taxid') %>% dplyr::rename(ancombc = 2)
 ```
 
-The object `out` contains all model output. Again, see the 
-[documentation of the function](https://rdrr.io/github/FrederickHuangLin/ANCOMBC/man/ancombc.html) 
-under **Value** for an explanation of all the output objects. Our question
-whether taxa are differentially abundant can be answered by looking at the
-`res` object, which now contains dataframes with the coefficients, 
-standard errors, p-values and q-values. Conveniently, there is a dataframe
-`diff_abn`. Here, for each taxon it is indicated whether it is differentially
-abundant between the groups (again, keep in mind that the answer is not 
-black-white). Below we show the first 6 entries of this dataframe:  
+```{r ancombc2b, warning = FALSE, eval=TRUE}
+# store the FDR adjusted results [test on v2.0.3] 
+ancombc_result <- cbind.data.frame(taxid = out$res$taxon,
+                       ancombc = as.vector(out$res$q_Geographical_locationPune))
+```
 
-```{r, eval=TRUE}
-kable(head(ancombc_out))
+
+
+
+```{r ancombc2c, warning = FALSE, eval=TRUE}
+# store the FDR adjusted results [test on v1.2.2]
+ancombc_result <- out$res %>% dplyr::select(starts_with(c("taxon", "lfc", "q")))
+```
+
+The object `out` contains all model output. Again, see the
+[documentation of the
+function](https://rdrr.io/github/FrederickHuangLin/ANCOMBC/man/ancombc.html)
+under **Value** for details. Our question whether taxa are
+differentially abundant can be answered by looking at the `res`
+object, which contains dataframes with the coefficients, standard
+errors, p-values and q-values. Below we show the first entries of this
+dataframe.
+
+```{r ancom_kable, eval=TRUE}
+kable(head(ancombc_result))
 ```
 
 
 
 ### MaAsLin2 
 
-Next, we will illustrate the use of MaAsLin2 [@Mallick2020]. The method is based on
-generalized linear models. It is flexible for different study designs
-and covariate structures. For more details, you can check their [official
-tutorial](https://github.com/biobakery/biobakery/wiki/maaslin2).
+Let us next illustrate MaAsLin2 [@Mallick2020]. This method is based on
+generalized linear models and flexible for different study designs
+and covariate structures. For details, check their
+[Biobakery tutorial](https://github.com/biobakery/biobakery/wiki/maaslin2).
 
 ```{r maaslin2, results = "hide", eval=TRUE}
 # maaslin expects features as columns and samples as rows 
-# for both the asv/otu table as well as meta data 
-asv <- t(assay(tse))
-meta_data <- data.frame(colData(tse))
+# for both the abundance table as well as metadata 
+
 # We can specify different GLMs/normalizations/transforms.
 # Let us use similar settings as in Nearing et al. (2021):
 maaslin2_out <- Maaslin2(
-  asv,
-  meta_data,
+  t(assay(tse)),
+  data.frame(colData(tse)),
   output = "DAA example",
   transform = "AST",
   fixed_effects = "Geographical_location",
@@ -359,31 +419,30 @@ Which genera are identified as differentially abundant? (leave out "head" to see
 kable(head(filter(maaslin2_out$results, qval <= 0.05)))
 ```
 
-A folder will be created that is called like the above specified
-output.  It contains also figures to visualize the difference between
-genera for the significant ones.
+This will create a folder that is called like in the output specified
+above. It contains also figures to visualize difference between
+significant taxa.
 
 
 ### LinDA 
 
 Lastly, we cover linear models for differential abundance analysis of
-microbiome compositional data (@Zhou2022). This tool is very similar
-to ANCOMBC with few differences: 1) LinDA correct for the
-compositional bias differently using the mode of all regression
-coefficients. 2) The authors claim that it runs 100-1000x faster than
-ANCOMBC and 3) it support hierarchical models.  The latter could be
-ignored as ANCOMBC will be supporting hierarchical models with the
-next release. Nevertheless, LinDA seems a promising tool that achieves
-the best power/fdr trade-off together with ANCOMBC according to the
-authors. The speed might make it the choice for bigger datasets or
-datasets with a very high number of features.
+microbiome compositional data (@Zhou2022). This is very similar to
+ANCOMBC with few differences: 1) LinDA correct for the compositional
+bias differently using the mode of all regression coefficients. 2) it
+is faster (100x-1000x than ANCOMBC and according to the authors); 3)
+it supports hierarchical models. The latest ANCOMBC versions are also
+supporting hierarchical models. Nevertheless, LinDA seems a promising
+tool that achieves a very good power/fdr trade-off together with
+ANCOMBC according to the review. The speed improvements might make it
+critical especially for datasets that have higher sample or feature
+set sizes.
 
 
 ```{r linda, eval=TRUE}
-otu.tab <- as.data.frame(assay(tse))
 meta <- as.data.frame(colData(tse)) %>% dplyr::select(Geographical_location)
 linda.res <- linda(
-  otu.tab, 
+  as.data.frame(assay(tse)), 
   meta, 
   formula = '~Geographical_location', 
   alpha = 0.05, 
@@ -391,25 +450,35 @@ linda.res <- linda(
   mean.abund.filter = 0)
 
 linda_out <- linda.res$output$Geographical_locationPune
+```
+
+```{r linda2, eval=TRUE}
 # to scan the table for genera where H0 could be rejected:
 kable(head(filter(as.data.frame(linda_out), reject)))
 ```
 
 ### ZicoSeq
 
-Subsequently, we add a linear model and permutation-based method, see details at [tutorial](https://cran.r-project.org/web/packages/GUniFrac/vignettes/ZicoSeq.html). This approach has been assessed to exhibit high power and a low false discovery rate, which has the following components: 
+Subsequently, we add a linear model and permutation-based method, see
+details at [tutorial](https://cran.r-project.org/web/packages/GUniFrac/vignettes/ZicoSeq.html).
 
-  - 1) Winsorization to decrease the influence of outliers;
-  - 2) Posterior sampling based on a beta mixture prior to address sampling variability and zero inflation;
-  - 3) Reference-based multiple-stage normalization to address compositional effects;
+This approach has been assessed to exhibit high power and a low false
+discovery rate, which has the following components:
+
+  1. Winsorization to decrease the influence of outliers;
+  
+  1. Posterior sampling based on a beta mixture prior to address
+  sampling variability and zero inflation;
+  
+  1. Reference-based multiple-stage normalization to address
+  compositional effects;
 
 
 ```{r ZicoSeq, eval=TRUE}
 set.seed(123)
-otu.tab <- as.matrix(assay(tse))
-meta <- as.data.frame(colData(tse)) 
+meta <- as.data.frame(colData(tse))
 zicoseq.obj <- GUniFrac::ZicoSeq(meta.dat = meta, 
-                                 feature.dat = otu.tab,
+                                 feature.dat = as.matrix(assay(tse)),
                                  grp.name = 'Geographical_location',
                                  adj.name = NULL, 
                                  feature.dat.type = 'count',
@@ -419,150 +488,64 @@ zicoseq.obj <- GUniFrac::ZicoSeq(meta.dat = meta,
                                  max.abund.filter = 0,
                                  return.feature.dat = T)
 zicoseq_out <- cbind.data.frame(p.raw=zicoseq.obj$p.raw, p.adj.fdr=zicoseq.obj$p.adj.fdr) 
+
+
+```{r ZicoSeq_kable, eval=TRUE}
 kable(head(filter(zicoseq_out, p.adj.fdr<0.05)))
 ```
 
 
 ```{r ZicoSeqplot, eval=TRUE}
 ## x-axis is the effect size: R2 * direction of coefficient
-ZicoSeq.plot(ZicoSeq.obj = zicoseq.obj, meta.dat = meta, pvalue.type ='p.adj.fdr')
+ZicoSeq.plot(ZicoSeq.obj = zicoseq.obj,
+             meta.dat = meta,
+	     pvalue.type ='p.adj.fdr')
 ```
 
 
 
-### Comparison of the methods
+### Comparison of methods
 
-When we compare the methods in the context of a research question, we could
-look at e.g. at whether they agree based on the applied decision criterion
-(e.g. adjusted p value <= 0.05). That is what we illustrate here. First we will 
-look at how many taxa were identified by each method to begin with. In the next
-step we will look at the intersection of identified taxa. To achieve that, we
-first create a dataframe that summarises the decision criterion for each method
-and shows a score from 0 to 3 indicating how many methods agreed on a particular
-taxon.
-
-
-```{r comparison, eval=TRUE}
-summ <- full_join(rownames_to_column(aldex_out, "taxid") %>% dplyr::select(taxid, aldex2 = wi.eBH),
-    ancombc_out,by = "taxid") %>%
-  full_join(
-    dplyr::select(maaslin2_out$results, taxid = feature, maaslin2 = qval), 
-    by = "taxid") %>%
-    full_join(linda_out %>% rename(LinDA=padj) %>% dplyr::select(LinDA)%>% rownames_to_column('taxid') ) %>%
-  full_join(zicoseq_out %>% dplyr::select(p.adj.fdr) %>% rename(ZicoSeq = p.adj.fdr) %>% rownames_to_column('taxid')) %>%
-  mutate(
-    across(c(aldex2: ZicoSeq), ~ .x <= 0.05),
-    # the following line would be necessary without prevalence filtering 
-    # as some methods output NA
-    #across(-taxid, function(x) ifelse(is.na(x), FALSE, x)),
-    score = rowSums(across(c(aldex2, ancombc, maaslin2, LinDA, ZicoSeq)))
-  )
-
-# This is how it looks like:
-kable(head(summ))
-```
-
-Now we can answer our questions:
-
-```{r, eval=TRUE}
-# how many genera were identified by each method?
-summarise(summ, across(where(is.logical), sum)) %>%
-  kable()
-# which genera are identified by all methods?
-filter(summ, score == 5) %>% kable()
-```
-
-We see that each method identified at least some genera as differentially
-abundant. Many of those that were identified by ALDEx2,
-were also identified by the other methods. Let us plot the data for
-any method or for those taxa that were identified by all methods:
-
-
-```{r, daplotting, eval=TRUE, fig.width=20,fig.height=4}
-# Data
-data(peerj13075)
-tse <- peerj13075
-
-# Add relative abundances and clr abundances
-tse <- transformCounts(tse, method="relabundance")
-tse <- transformCounts(tse, method="clr", pseudocount=1) # not bale to run
-
-# Subset to prevalent taxa (exclude rare taxa at 10 percent prevalence using 0 detection threshold):
-# do the subsetting based on the relative abundance assay
-tse <- subsetByPrevalentTaxa(tse, detection = 0, prevalence = 10/100, assay.type="relabundance")
-
-# Subset to certain geolocations
-tse <- tse[ ,tse$Geographical_location %in% c("Pune", "Nashik")]
-
-# Let us make the geo location a factor
-tse$Geographical_location <- factor(tse$Geographical_location)
-
-# Create a jittered boxplot for each genus 
-assay.type <- "relabundance"
-plot_data <- data.frame(t(assay(tse, assay.type)))
-plot_data$Geographical_location <- tse$Geographical_location
-plots <- pmap(dplyr::select(summ, taxid, score), function(taxid, score) {
-  ggplot(plot_data, aes_string(x="Geographical_location", y=taxid)) +
-    geom_boxplot(outlier.shape = NA) +
-    geom_jitter(width = 0.2) +
-    # scale_y_log10() + # log trans will cause 0 values missing 
-    scale_y_sqrt() + 
-    labs(title=glue::glue("{taxid}"), x="", y=glue::glue("Abundance ({assay.type})")) +    
-    theme_bw() +
-    theme(legend.position = "none")
-})
-
-# now we can show only those genera that have at least score 5 (or 4 or 3 or 2 or 1)
-robust_plots <- plots[summ$score == 4 & !is.na(summ$score)] 
-
-# to display this nicely in the book we use patchwork here:
-# (we show first ones)
-robust_plots[[1]] + 
-  robust_plots[[2]] + 
-  robust_plots[[3]] + 
-  robust_plots[[4]] +
-  robust_plots[[5]] +
-  robust_plots[[6]] +
-  plot_layout(nrow = 1)
-  
-# or if we have most trust in any specific method we can show genera that 
-# are differentially abundant according to that method and then look in the
-# title how many methods also identified it (we only show first 6 here):
-ancombc_plots <- plots[summ$ancombc & !is.na(summ$score)] 
-ancombc_plots[[1]] + 
-  ancombc_plots[[2]] + 
-  ancombc_plots[[3]] + 
-  ancombc_plots[[4]] +
-  ancombc_plots[[5]] +
-  ancombc_plots[[6]] +
-  plot_layout(nrow = 1)
-```
+The different methods yield somewhat different results but they could
+be also expected to overlap to a substantial degree. As an exercirse,
+you can compare the outcomes between the different methods in terms of
+effect sizes, significances, or other aspects that are comparable
+between the methods.
 
 
 
-### Confounding variables
 
-Confounders are common for microbiome studies. In general, it can be classified into 3 types:
+## Confounding variables
+
+Confounders are common in experimental research. In general, these can be
+classified into 3 types:
 
 - Biological confounder, such as age, sex, etc. 
-- Technical confounder that caused by data collection, storage, DNA extraction, sequencing process, etc. 
-- Confounder caused by experimental models, such as cage effect, sample background, etc. 
 
-Adjusting confounder is necessary and important to reach a valid conclusion. To perform causal inference, it is crucial that the method is able to include covariates in the model. This is not possible with e.g. the Wilcoxon test. Other methods such as DESeq2, edgeR, ANCOMBC, LDM, Aldex2, Corncob, MaAsLin2, ZicoSeq, fastANCOM and ZINQ allow this. Below we show how to include a confounder/covariate in ANCOMBC, LinDA and ZicoSeq.
+- Technical confounder that caused by data collection, storage, DNA
+  extraction, sequencing process, etc.
+
+- Confounder caused by experimental models, such as cage effect,
+  sample background, etc.
+
+Adjusting confounder is necessary and important to reach a valid
+conclusion. To perform causal inference, it is crucial that the method
+is able to include covariates in the model. This is not possible with
+e.g. the Wilcoxon test. Other methods such as DESeq2, edgeR, ANCOMBC,
+LDM, Aldex2, Corncob, MaAsLin2, ZicoSeq, fastANCOM and ZINQ allow
+this. Below we show how to include a confounder/covariate in ANCOMBC,
+LinDA and ZicoSeq.
 
 
-#### ANCOMBC
+### ANCOMBC
 
 ```{r ancombc_adj, eval=TRUE}
-# make phyloseq object
-otu <- otu_table(assay(tse), taxa_are_rows = T)
-taxa <- tax_table(as.matrix(rowData(tse)))
-meta <- sample_data(as.data.frame(colData(tse)))
-phy <- phyloseq(otu,taxa,meta)
 # perform the analysis 
-ancombc_cov <- ancombc(
-  phyloseq = phy,
-  formula = "Geographical_location + Age", 
+ancombc_cov <- ancombc2(
+  data = tse,
+  assay_name = "counts",
+  tax_level = "genus",
+  fix_formula = "Geographical_location + Age", 
   p_adj_method = "fdr", 
   lib_cut = 0, 
   group = "Geographical_location", 
@@ -575,36 +558,40 @@ ancombc_cov <- ancombc(
 # bacterial taxa differentially abundant? Or, if that is of interest,
 # holding phenotype constant, is Age associated with bacterial abundance?
 # Again we only show the first 6 entries.
-kable(head(ancombc_cov$res$q_val))
 ```
 
-#### LinDA
+```{r ancombc_adj2, eval=TRUE}
+tab <- ancombc_cov$res %>% dplyr::select(starts_with(c("taxon", "lfc", "q")))
+kable(head(tab))
+```
+
+### LinDA
+
 
 ```{r linda_adj, eval=TRUE}
-otu.tab <- as.data.frame(assay(tse))
-meta <- as.data.frame(colData(tse))
+
 linda_cov <- linda(
-  otu.tab, 
-  meta, 
+  as.data.frame(assay(tse, "counts")), 
+  as.data.frame(colData(tse)), 
   formula = '~ Geographical_location + Age', 
   alpha = 0.05, 
   prev.filter = 0, 
   mean.abund.filter = 0)
 linda.res <- linda_cov$output$Geographical_locationPune
-kable(head(filter(linda.res, reject==T)))
+```
 
+```{r linda_adj2, eval=TRUE}
+kable(head(filter(linda.res, reject==T)))
 ```
 
 
 
-#### ZicoSeq
+### ZicoSeq
 
 ```{r ZicoSeq_adj, eval=TRUE}
 set.seed(123)
-otu.tab <- as.matrix(assay(tse))
-meta <- as.data.frame(colData(tse)) 
-zicoseq.obj <- GUniFrac::ZicoSeq(meta.dat = meta, 
-                                 feature.dat = otu.tab,
+zicoseq.obj <- GUniFrac::ZicoSeq(meta.dat = as.data.frame(colData(tse)) , 
+                                 feature.dat = as.matrix(assay(tse)),
                                  grp.name = 'Geographical_location',
                                  adj.name = 'Gender', 
                                  feature.dat.type = 'count',
@@ -613,20 +600,25 @@ zicoseq.obj <- GUniFrac::ZicoSeq(meta.dat = meta,
                                  mean.abund.filter = 0,
                                  max.abund.filter = 0,
                                  return.feature.dat = T)
-zicoseq_out <- cbind.data.frame(p.raw=zicoseq.obj$p.raw, p.adj.fdr=zicoseq.obj$p.adj.fdr) 
+zicoseq_out <- cbind.data.frame(p.raw=zicoseq.obj$p.raw,
+                                p.adj.fdr=zicoseq.obj$p.adj.fdr) 
+```
+
+```{r ZicoSeq_adj2, eval=TRUE}
 kable(head(filter(zicoseq_out, p.adj.fdr<0.05)))
 ```
 
-In the next section of this book chapter we cover methods that can also take
-into account the phylogenetic information of bacterial taxa to perform 
-group-wise associations.
 
 
 ## Tree-based methods
 
+Let us next cover phylogeny-aware methods to perform group-wise
+associations.
+
 ### Group-wise associations testing based on balances
 
-For testing associations based on balances, check the philr R/Bioconductor package.
+For testing associations based on balances, check the philr
+R/Bioconductor package.
 
 
 ## Session Info {-}
